--- a/HomeDecorStore/Web.config
+++ b/HomeDecorStore/Web.config
@@ -4,9 +4,15 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="HomeDecorDB"
+			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HomeDecorDB.mdf;Integrated Security=True"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
+	  <roleManager enabled="true" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
@@ -15,21 +21,21 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
-	  <!--<authentication mode="Forms">
+	  <authentication mode="Forms">
 		  <forms loginUrl="~/Login.aspx" timeout="2880"/>
 	  </authentication>
 	  <authorization>
 		  <allow users="*"/>
-	  </authorization>-->
+	  </authorization>
   </system.web>
-	<!--<location path="Admin">
+	<location path="Admin">
 		<system.web>
 			<authorization>
 				<allow roles="Admin"/>
 				<deny users="*"/>
 			</authorization>
 		</system.web>
-	</location>-->
+	</location>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
